feat: :sparkles: Initial commit
