# src/controllers/home.js
@@ -1,0 +1,7 @@
+import { getExpenses } from "./expenses/index.js";
+
+const getHome = async (req, res) => {
+  res.render('home', { title: 'Home' });
+}
+
+export { getHome };
